M70: chromeos: Fix SessionObserver::OnFirstSessionStarted() not firing

During OOBE and normal user login, when
SessionController::SetUserSessionOrder() is called there is an
existing user session, so last_active_account_id.is_valid() returns
true and the observer never fires.

I suspect this breaks some accessibility features in kiosk mode
(magnifier keyboard control) and for hotrod (long-press for
spoken feedback).

It's probably been broken since the observer was added in May:
https://chromium-review.googlesource.com/c/chromium/src/+/1070771

Bug: 884275
Test: added to ash_unittests
Change-Id: Idbe4f20b7426742703995a05c7ebb1c5c8f1a7c8
Reviewed-on: https://chromium-review.googlesource.com/1226876
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#591450}(cherry picked from commit 16e955da17834f49d6fab86710171a5bef66815d [formerly 9a19742ed78ab493fb308903b84bf41aab2cdacc])
Reviewed-on: https://chromium-review.googlesource.com/1241276
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#600}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 65feb8b62e4afd4f1dfbc732a43859731b20061d