ash/session/session_controller.cc
@@ -341,9 +341,10 @@ void SessionController::SetUserSessionOrder(
 
   // Check active user change and notifies observers.
   if (user_sessions_[0]->session_id != active_session_id_) {
+    const bool is_first_session = active_session_id_ == 0u;
     active_session_id_ = user_sessions_[0]->session_id;
 
-    if (!last_active_account_id.is_valid()) {
+    if (is_first_session) {
       for (auto& observer : observers_)
         observer.OnFirstSessionStarted();
     }
